test: fix ClientWatchManagerTest